feat: socio status, tag e tipo
