# api/wegia/Modules/ContribuicaoSocios/routes/api.php
@@ -5,6 +5,9 @@ use Modules\ContribuicaoSocios\app\Http\Controllers\ContribuicaoGatewayPagamento
 use Modules\ContribuicaoSocios\app\Http\Controllers\ContribuicaoMeioDePagamentoController;
 use Modules\ContribuicaoSocios\app\Http\Controllers\ContribuicaoRegrasController;
 use Modules\ContribuicaoSocios\app\Http\Controllers\ContribuicaoConjuntoRegrasController;
+use Modules\ContribuicaoSocios\app\Http\Controllers\SocioStatusController;
+use Modules\ContribuicaoSocios\app\Http\Controllers\SocioTipoController;
+use Modules\ContribuicaoSocios\app\Http\Controllers\SocioTagController;
 
 Route::prefix('contribuicao')->group(function () {
 
@@ -31,6 +34,25 @@ Route::prefix('contribuicao')->group(function () {
             Route::post('', [ContribuicaoConjuntoRegrasController::class, 'cadastrar']);
             Route::put('{id}', [ContribuicaoConjuntoRegrasController::class, 'atualizar']);
         });
+    });
+
+});
+
+Route::prefix('socio')->group(function () {
+
+    Route::prefix('status')->group(function () {
+        Route::get('filtro', [SocioStatusController::class, 'buscarTodosParaFiltro']);
+    });
+
+    Route::prefix('tipo')->group(function () {
+        Route::get('filtro', [SocioTipoController::class, 'buscarTodosParaFiltro']);
+    });
+
+    Route::prefix('tag')->group(function () {
+        Route::get('filtro', [SocioTagController::class, 'buscarTodosParaFiltro']);
+        Route::get('', [SocioTagController::class, 'buscarTodosPaginado']);
+        Route::post('', [SocioTagController::class, 'cadastrar']);
+        Route::put('{id}', [SocioTagController::class, 'atualizar']);
     });
 
 });
